# sea_orm_underscore_fields

./: Cargo.toml
src/: main.rs
src/entity/: underscores.rs  underscores_workaround.rs
